--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>Lumitutka</title>
         <link rel="stylesheet" href="css/main.css" type="text/css" />
         <link rel="icon" href="images/favicon.png">
+ 
         <!--[if IE]>
             <script src="https://html5shiv.googlecode.com/svn/trunk/html5.js"></script><![endif]-->
         <!--[if lte IE 7]>
@@ -15,6 +16,10 @@
 
     </head>
     <body id="index" class="home">
+        <!-- <script src="./snowing.js"></script> -->
+        
+        <script src="./PureSnow.js"></script>
+        <div id="snow" class="background"></div>
         <header id="banner" class="body">
             <h1>Lumitutka</h1>
             <nav>
@@ -29,7 +34,7 @@
                         <a href="#">Palvelut</a> 
                     </li> 
                     <li>
-                        <a href="#"></a> 
+                        <a href="#">Palveluntarjoajat</a> 
                     </li> 
                 </ul>
             </nav>
@@ -46,6 +51,7 @@
         </article>                   
         </aside><!-- /#featured -->
           <section id="content" class="body">
+            <h3>Keskiviikko 21.12.2022</h3>
             <table>
                 <th>Palvelu</th>
                 <th>Tuntihinta</th>
